added hamburger menu

--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -2,6 +2,7 @@ $primary-color: aquamarine;
 $secondary-color: rgb(104, 3, 3);
 $third-color: rgb(237, 188, 226);
 $fourth-color: pink;
+$accent-color: black;
 
 $font-weights: (
   "regular": 400,
