--- a/src/app/home.modules.scss
+++ b/src/app/home.modules.scss
@@ -31,16 +31,23 @@ body {
 }
 
 .main {
-  @include flexCenter(column);
+  @include flexCenter(row);
   width: 80%;
   margin: 0 auto;
   background-color: $third-color;
-  #{&}__paragraph {
+  #{&}__paragraph1 {
     font-weight: weight(bold);
     &:hover {
       color: $fourth-color;
     }
   }
+  #{&}__paragraph2 {
+    @extend .main__paragraph1;
+    &:hover {
+      color: $accent-color;
+    }
+  }
+
   @include mobile {
     flex-direction: column;
   }
