--- a/src/components/_mixin.scss
+++ b/src/components/_mixin.scss
@@ -1,7 +1,25 @@
-
 @mixin flexCenter($direction) {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: $direction;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: $direction;
+}
+
+@mixin fadeAnimation {
+  @keyframes fadeInOut {
+    0% {
+      opacity: 0;
+      display: none;
+    }
+
+    50% {
+      opacity: 0.5;
+      @include flexCenter(column);
+    }
+
+    100% {
+      opacity: 1;
+      @include flexCenter(column);
+    }
   }
+}
