--- a/src/components/_navstyles.scss
+++ b/src/components/_navstyles.scss
@@ -1,6 +1,7 @@
-// @use "_index"
-@import "./colours";
-@import "./mixin";
+@use "index" as *;
+// @import "./colours";
+// @import "./mixin";
+// @use "./colours" as *;
 
 body {
   background-color: $backGround;
@@ -22,11 +23,21 @@ body {
 }
 .main-nav {
   @include flexCenter(row);
+
   @media (width <600px) {
     height: 100vh;
     background-color: $primaryColor;
     color: $secondaryColor;
     font-weight: weight(bold);
+    display: none;
+    opacity: 0;
+    animation: fadeInOut 0.6s ease-in-out;
+
+    &.show {
+      // display: block;
+      @include flexCenter(column);
+      opacity: 1;
+    }
   }
 
   &__list {
@@ -38,3 +49,6 @@ body {
     }
   }
 }
+
+// animation rules via a mixin!
+@include fadeAnimation;
