added background image

--- a/src/components/_colours.scss
+++ b/src/components/_colours.scss
@@ -5,6 +5,7 @@ $textColor: white;
 
 $font: "Times New Roman", Times, serif;
 $fontSize: 18px;
+$fontSizeHomePage: 30px;
 
 $font-weights: (
   "regular": 400,
